# kimi-mem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  pyproject.toml  sponsor.html
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml  release.yml
kimi_mem/: __init__.py  cli.py  config.py  db.py  embeddings.py  installer.py  mcp_server.py  privacy.py  search.py  server.py  summarizer.py
kimi_mem/hooks/: common.py  debug.py  post_tool_use.py  session_end.py  session_start.py  setup.py  user_prompt_submit.py
scripts/: install.py
tests/: test_db.py  test_mcp.py
