[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-mem"
version = "0.2.1"
description = "Persistent memory system for Kimi Code CLI — remember context across sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "The Retech Team"},
]
keywords = ["kimi", "memory", "cli", "agent", "persistent-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "toml>=0.10",
    "sqlite-vec>=0.1",
    "mcp>=1.27",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
kimi-mem = "kimi_mem.cli:main"

[project.urls]
Homepage = "https://github.com/theretech/kimi-mem"
Repository = "https://github.com/theretech/kimi-mem"
Issues = "https://github.com/theretech/kimi-mem/issues"

[tool.hatch.build.targets.wheel]
packages = ["kimi_mem"]

[tool.ruff]
line-length = 100
